# agnes-the-ai-analyst

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .test_durations  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Caddyfile  Dockerfile  Dockerfile.demo  LICENSE  Makefile  README.md  alembic.ini  docker-compose.ci.yml  docker-compose.dev.yml  docker-compose.flat-mount.yml  docker-compose.gcp-logging.yml  docker-compose.host-mount.yml  docker-compose.local-dev.yml  docker-compose.mtier.yml  docker-compose.override.yml  docker-compose.pgweb.yml  docker-compose.postgres-host-mount.yml  docker-compose.postgres.yml  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.tls.yml  docker-compose.yml  dr-postgres-split-plan.md  llms.txt  make-local-dev.ps1  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.claude/: settings.json
.github/: CODEOWNERS  dependabot.yml  release-drafter.yml  settings.yml
app/: connections_seed.py  data_apps_subdomain.py  datasource_secrets.py  instance_config.py  job_correlation.py  logging_config.py  main.py  markdown_render.py  notifications.py  plugins.py  resource_types.py  roles.py  secrets.py  secrets_vault.py  serialization.py  startup_guards.py  utils.py  version.py
auth/: __init__.py
cli/: client.py  config.py  error_render.py  main.py  query_hints.py  snapshot_meta.py  token_status.py  update_check.py  upgrade_prompt.py  upgrade_status.py  v2_client.py
config/: .env.template  __init__.py  agnes_workspace_template.txt  claude_md_template.txt  data_description.md.example  deploy.staging.yml  deploy.yml  instance.mtier.yaml  instance.yaml.example  loader.py
connectors/: __init__.py
dev_docs/: POC-mcp-universal.md  README.md  design-system.md  desktop-app.md  disaster-recovery.md  insights.md  jira.md  plan-corporate-memory.md  plan-rsync-fix.md  plan_parquet_types_fix.md  security.md  server.md  session_explore.md  telegram_bot.md
dev_scripts/: README.md  test_sync.sh
docs/: ADR-corporate-memory-v1.md  CONFIGURATION.md  DATA_SOURCES.md  DEPLOYMENT.md  GETTING_STARTED.md  HACKATHON.md  HEADLESS_USAGE.md  ONBOARDING.md  PLAN.md  PLATFORM_SETUP.md  QUICKSTART.md  RBAC.md  README.md  REFACTORING_PLAN.md  RELEASE_CHECKLIST.md  RELEASE_TEMPLATE.md  RELEASING.md  SESSION_FLOW.md  STORE_GUARDRAILS.md  TODO-rbac-data-enforcement.md  TODO.md  VIBECODING_GUIDE.md  agent-setup-prompt.md  agent-workspace-prompt.md  agnes-marketplace-proposal-remake.md  api-reference.md  architecture.md  auth-cloudflare.md  auth-google-oauth.md  auth-groups.md  auto-install.md  chat-keyless-auth.md  cloud-chat.md  corporate-memory-governance.md  curated-marketplace-format.md  development.md  ecosystem-map.md  google-workspace-setup.md  initial-workspace-override.md  internal-roles.md  (+21 more)
infra/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf
migrations/: env.py
scripts/: README.md  _fix_broken_imports.py  _normalize_factory_imports.py  _swap_function_local_imports.py  _swap_repos_extra_patterns.py  _swap_repos_to_factory.py  _unbreak_imports.py  activate_venv.sh  backfill_gap.sh  backfill_marketplace_rollup.py  backfill_usage_attribution.py  bootstrap-gcp.sh  build_demo_extract.py  collect_session.py  db_state_migrator.py  dev_pg_migrate_volume.sh  dev_pg_up.sh  dev_run.py  duckdb_manager.py  fetch-env-from-secrets.sh  fix_description_escapes.py  generate_openapi.py  generate_sample_data.py  generate_user_sync_configs.py  init.sh  jira_backfill.py  jira_backfill_remote_links.py  jira_backfill_sla.py  jira_consistency_check.py  jira_poll_sla.py  migrate_json_to_duckdb.py  migrate_metrics_to_duckdb.py  migrate_parquets_to_extracts.py  migrate_registry_to_duckdb.py  post-edit-quality.sh  release_digest.py  remote_query.sh  run-local-dev.ps1  run-local-dev.sh  seed_corporate_memory.py  (+15 more)
server/: corporate-memory.timer  deploy.sh  jira-consistency-deep.timer  jira-consistency.service  jira-consistency.timer  jira-sla-poll.service  jira-sla-poll.timer  limits-users.conf  migrate-home-to-disk.sh  migrate-to-v2.sh  notify-bot.service  session-collector.service  session-collector.timer  session_collector.py  setup-snapshot-schedule.sh  setup.sh  sudoers-deploy  sudoers-webapp  webapp-nginx.conf  webapp-setup.sh  webapp.service  ws-gateway.service
services/: __init__.py
src/: __init__.py  _profiler_worker.py  _subprocess_runner.py  analytics_backend.py  audit_helpers.py  catalog_export.py  category_icons.py  claude_md.py  config.py  connection_resolver.py  connection_specs.py  connectors_manifest.py  corpus_allowlist.py  data_semantics_scaffold.py  data_sync.py  db.py  db_pg.py  db_state_machine.py  demo_seed.py  distribution.py  duckdb_conn.py  ducklake_session.py  file_storage.py  flea_market.py  fts.py  github_app.py  grant_intersection.py  identifier_validation.py  incremental_jira_transform.py  initial_workspace.py  jira_file_lock.py  jira_transform.py  keboola_client.py  knowledge_digests.py  knowledge_packaging.py  marketplace.py  marketplace_asset_mirror.py  marketplace_asset_validation.py  marketplace_assets.py  marketplace_filter.py  (+23 more)
static/: maintenance.html
tests/: _ducklake_bounded_memory_child.py  _template_assertions.py  api_triple_surface_grandfathered.txt  chat_fakes.py  conftest.py  object_store_fakes.py  session_guards.py  test_access_control.py  test_access_requests_api.py  test_account_service.py  test_activity_api.py  test_admin_analytics_api.py  test_admin_audit.py  test_admin_bigquery_test_connection.py  test_admin_bq_register.py  test_admin_chat.py  test_admin_configure_api.py  test_admin_contributed_skills_api.py  test_admin_data_sources_page.py  test_admin_datasource_credentials_page.py  test_admin_datasource_secrets.py  test_admin_disabled_listing_paths.py  test_admin_discover_bigquery.py  test_admin_discover_keboola_plan.py  test_admin_keboola_materialized.py  test_admin_keboola_where_filters_builder.py  test_admin_knowledge_digests_page.py  test_admin_mcp_source_name_validation.py  test_admin_mcp_ui_fields.py  test_admin_mcp_vault.py  test_admin_metrics_page.py  (+842 more)
(+1462 files in other folders)
